# shadox

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: agent-capabilities.json  agent-contract.md  ecosystem-positioning.md  versioned-workspace.md
examples/: observe.rhai  shadox.toml
src/: config.rs  diagnostics.rs  fuse_adapter.rs  lib.rs  main.rs  metadata.rs  observer.rs  report.rs  runner.rs  trace.rs  versioned_fs.rs
src/runner/: linux.rs  unsupported.rs
tests/: agent_cli.rs  config_trace.rs  linux_runtime.rs
