[package]
name = "shadox"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "A rootless, process-level, agent-observable sandbox runtime."
repository = "https://github.com/wotchin/shadox"

[lib]
name = "shadox"
path = "src/lib.rs"

[[bin]]
name = "shadox"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rhai = { version = "1.23", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.9"
uuid = { version = "1.18", features = ["v4", "serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.23"
